# gitch

./: .check-commits.yaml  .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  pyproject.toml
nix/: formatter.nix
nix/devshells/gitch/: default.nix
python/gitch/: __init__.py  configuration.py  main.py
python/gitch/misc/pydantic/: alias_generators.py
python/gitch/misc/xdg/: __init__.py
src/: lib.rs
